feat: migrate to stylelint

--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "prelint": "rimraf ./testResults/**/*.xml",
     "lint": "npm-run-all --parallel lint:*",
     "lint:es": "eslint --ext .es,.js \"./source/scripts/**\" --format junit --output-file ./testResults/esLint.xml",
-    "lint:sass": "./node_modules/.bin/stylelint '**/*.scss' --syntax=scss --formatter --output-file ./testResults/sassLint.xml",
+    "lint:sass": "stylelint '**/*.scss' --syntax=scss --formatter --output-file ./testResults/stylelint.xml",
     "prettier:check": "prettier --check \"src/app/**/*.ts\"",
     "prettier:write": "prettier --write .",
-    "sass:fix": "./node_modules/.bin/stylelint '**/*.scss' --syntax=scss --fix",
+    "sass:fix": "stylelint '**/*.scss' --syntax=scss --fix",
     "start": "npm-run-all build:assets --parallel watch start:*",
     "start:hugo": "cross-env NODE_ENV=development hugo server --noHTTPCache=true --ignoreCache --templateMetrics --disableFastRender",
     "pretest": "npm run lint",
@@ -76,9 +76,9 @@
     "cpy-cli": "^3.1.1",
     "cross-env": "^7.0.3",
     "cssnano": "^4.1.10",
+    "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "eslint": "^7.21.0",
     "hashmark": "^5.0.0",
     "husky": "^4.3.8",
     "imagemin-cli": "^6.0.0",
@@ -88,12 +88,14 @@
     "npm-run-all": "^4.1.5",
     "onchange": "^6.1.1",
     "postcss-cli": "^7.1.2",
+    "prettier": "^2.3.0",
     "rimraf": "^3.0.2",
-    "stylelint-config-recommended": "^3.0.0",
-    "stylelint-config-sass-guidelines": "^7.1.0",
-    "stylelint-config-standard": "^20.0.0",
-    "stylelint-scss": "^3.18.0",
-    "stylelint": "^13.11.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-recommended": "^5.0.0",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-config-sass-guidelines": "^8.0.0",
+    "stylelint-config-standard": "^22.0.0",
+    "stylelint-scss": "^3.19.0",
     "susy": "^3.0.6",
     "svgo": "^1.3.2",
     "uglify-js": "^3.13.0",
