--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -46,7 +46,7 @@ rules:
   no-multiple-empty-lines: [2, { max: 2 }]
   no-trailing-spaces: 2
   object-curly-spacing: [2, 'never']
-  quotes: [2, 'double', 'avoid-escape']
+  quotes: [2, 'single', 'avoid-escape']
   semi: 2
   space-before-blocks: [2, 'always']
   space-before-function-paren: [2, 'never']
@@ -61,8 +61,6 @@ rules:
   no-confusing-arrow: 2
   prefer-const: 2
 
-  # JSX
-  jsx-quotes: [2, 'prefer-double']
 
   # Import
   import/no-unresolved: [1, { 'commonjs': true, 'amd': true }]
