--- a/config.yaml
+++ b/config.yaml
@@ -1,61 +1,73 @@
-baseURL: '/'
+baseURL: "/"
 defaultContentLanguage: pt
-languageCode: 'pt-br'
+languageCode: "pt-br"
 disableKinds:
-  - 'taxonomy'
-  - 'taxonomyTerm'
-  - 'RSS'
-  - 'sitemap'
+  - "taxonomy"
+  - "taxonomyTerm"
+  - "RSS"
+  - "sitemap"
 enableRobotsTXT: false
-metaDataFormat: 'yaml'
+metaDataFormat: "yaml"
 enableMissingTranslationPlaceholders: true
 disableFastRender: true
 ignoreFiles: ["\\.tmp$", "\\.tmp\\-browserify"]
 stepAnalysis: true
 templateMetrics: true
 pluralizeListTitles: false
-googleAnalytics: ''
+googleAnalytics: ""
 buildFuture: true
-FootnoteReturnLinkContents: '↩'
+FootnoteReturnLinkContents: "↩"
 disableHugoGeneratorInject: true
 taxonomies:
-  role: 'role'
+  role: "role"
 
 languages:
   pt:
     contentDir: content/portuguese
     languageName: Português
-    languageCode: 'pt-br'
-    title: 'YouBet! Uma transformação de vida'
+    languageCode: "pt-br"
+    title: "YouBet! Uma transformação de vida"
     weight: 1
     params:
-      subtitle: 'Quer se tornar um Cidadão Global?'
-      description: 'Queremos criar um país bilíngue de mente globalizada, impulsionando o intercâmbio'
-      mailchimpList: '#'
+      subtitle: "Quer se tornar um Cidadão Global?"
+      description: "Queremos criar um país bilíngue de mente globalizada, impulsionando o intercâmbio"
+      mailchimpList: "#"
     menu:
       main:
-        - Name: 'Sobre'
-          Pre: ''
+        - Name: "Sobre"
+          Pre: ""
           Weight: 1
-          Identifier: 'sobre'
-          URL: '/sobre'
-        - Name: 'Blog'
-          Pre: ''
+          Identifier: "about"
+          URL: "/sobre"
+        - Name: "Blog"
+          Pre: ""
           Weight: 2
-          Identifier: 'blog'
-          URL: '/blog'
-        - Name: 'Contato'
-          Pre: ''
+          Identifier: "blog"
+          URL: "/blog"
+        - Name: "Colégios"
+          Pre: ""
           Weight: 3
-          Identifier: 'contato'
-          URL: '/contato'
-params:
-    authors:
-    - Name: 'Evelyn Perez'
-      Weight: 1
-    - Name: 'Stephanie Castro'
-      Weight: 2
+          Identifier: "colleges"
+          URL: "/colegios"
+        - Name: "Campion"
+          Pre: ""
+          Weight: 1
+          Identifier: "campion"
+          URL: "/campion"
+          parent: "colleges"
+        - Name: "Bma"
+          Pre: ""
+          Weight: 2
+          Identifier: "bma"
+          URL: "/bma"
+          parent: "colleges"
 
+params:
+  authors:
+    - Name: "Evelyn Perez"
+      Weight: 1
+    - Name: "Stephanie Castro"
+      Weight: 2
   # shareImages:
   #   default: "assets/images/compartilhamento.jpg"
   #   twitter: "assets/images/twitter-compartilhamento.jpg"
