--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,17 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
-  "printWidth": 80,
+  "printWidth": 120,
   "bracketSpacing": true,
-  "useTabs": false
+  "useTabs": false,
+  "overrides": [
+    {
+      "files": [
+        "*.html"
+      ],
+      "options": {
+        "parser": "go-template"
+      }
+    }
+  ]
 }
