--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
     "npm-run-all": "^4.1.5",
     "onchange": "^6.1.1",
     "postcss-cli": "^7.1.2",
-    "prettier": "^2.3.0",
+    "prettier": "^2.3.1",
+    "prettier-plugin-go-template": "0.0.10",
     "rimraf": "^3.0.2",
     "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^5.0.0",
