--- a/data/pt/highSchool.yml
+++ b/data/pt/highSchool.yml
@@ -1,5 +1,5 @@
 title: "Ensino Médio nos Estados Unidos?"
-image: "/uploads/images/grupo-jovens-estudantes.jpg"
+image: "/uploads/images/adolescentes-no-campus.png"
 alt: "Jovens estudando e conversando"
 buttonText: "saiba mais"
 buttonUrl: "/ensino-medio"
