feat: update package

--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "start:hugo": "cross-env NODE_ENV=development hugo server --noHTTPCache=true --ignoreCache --templateMetrics --disableFastRender",
     "pretest": "npm run lint",
     "test": "jest",
-    "preversion": "git checkout master && git merge dev",
+    "preversion": "git checkout main && git merge dev",
     "version": "version-changelog CHANGELOG.md && changelog-verify CHANGELOG.md && git add CHANGELOG.md",
-    "postversion": "git checkout dev && git merge master",
+    "postversion": "git checkout dev && git merge main",
     "watch": "npm-run-all --parallel watch:*",
     "watch:sass": "onchange \"./source/stylesheets/**/*.scss\" -- npm run build:css",
     "watch:img": "onchange \"./source/img/**/*.{gif,jpg,png,svg}\" -- npm run build:img",
