feat: npm update

--- a/.prettierrc
+++ b/.prettierrc
@@ -8,7 +8,9 @@
   "useTabs": false,
   "overrides": [
     {
-      "files": ["*.html"],
+      "files": [
+        "*.html"
+      ],
       "options": {
         "parser": "go-template"
       }
