--- a/data/pt/destinations.yml
+++ b/data/pt/destinations.yml
@@ -1,6 +1,6 @@
-title: "Destinos"
+title: 'Destinos'
 list:
-  - title: "Estados Unidos"
+  - title: 'Estados Unidos'
     image: /uploads/images/eua.png
-  - title: "Canadá"
+  - title: 'Canadá'
     image: /uploads/images/canada.png
