--- a/.prettierrc
+++ b/.prettierrc
@@ -6,11 +6,10 @@
   "printWidth": 120,
   "bracketSpacing": true,
   "useTabs": false,
+  "goTemplateBracketSpacing": true,
   "overrides": [
     {
-      "files": [
-        "*.html"
-      ],
+      "files": ["*.html"],
       "options": {
         "parser": "go-template"
       }
