--- a/data/pt/globalCitizen.yml
+++ b/data/pt/globalCitizen.yml
@@ -4,9 +4,7 @@ alt: "Jovens estudantes sorrindo na biblioteca"
 buttonText: "saiba mais"
 buttonUrl: "/ensino-medio"
 content: "
-Com a YouBet! nós criamos oportunidades de unir pessoas das mais diversas nações, promovendo o desenvolvimento pessoal de nossos alunos e o respeito mútuo. Não queremos somente ensinar um idioma ou vender pacotes de viagens enlatados, mas unificar o aprendizado com uma imersão cultural, ensinando nossos alunos e professores habilidades que os tornem cidadãos globais.
+Com a **YouBet!** nós criamos oportunidades de unir pessoas de diversas nações, promovendo o desenvolvimento pessoal e o respeito mútuo. Não queremos somente ensinar um idioma ou vender pacotes de viagens enlatados, mas unificar o aprendizado com uma imersão cultural, ensinando nossos alunos habilidades que os tornem cidadãos do mundo.
 
-
- **Venha ser um cidadão agora**.
-
+**Venha ser um cidadão agora**.
 "
