--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lint": "npm-run-all --parallel lint:*",
     "lint:es": "eslint --ext .es,.js \"./source/scripts/**\" --format junit --output-file ./testResults/esLint.xml",
     "lint:sass": "stylelint '**/*.scss' --syntax=scss --formatter --output-file ./testResults/stylelint.xml",
-    "prettier:check": "prettier --check \"src/app/**/*.ts\"",
+    "prettier:check": "prettier --check  'src/**/*.js'",
     "prettier:write": "prettier --write .",
     "sass:fix": "stylelint '**/*.scss' --syntax=scss --fix",
     "start": "npm-run-all build:assets --parallel watch start:*",
@@ -55,51 +55,53 @@
   "homepage": "http://youbetschool.com",
   "dependencies": {
     "@glidejs/glide": "^3.4.1",
-    "caniuse-lite": "^1.0.30001194",
-    "core-js": "^3.9.1",
+    "caniuse-lite": "^1.0.30001251",
+    "core-js": "^3.16.2",
     "formbouncerjs": "^1.4.6",
-    "jest": "^25.5.4",
-    "netlify-cms": "^2.10.96",
-    "node-sass": "^4.14.1"
+    "jest": "^27.0.6",
+    "netlify-cms": "^2.10.158",
+    "node-sass": "^6.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.0",
-    "@babel/core": "^7.13.8",
-    "@babel/preset-env": "^7.13.9",
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/eslint-parser": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
     "@songkick/replaceinfiles": "^1.1.6",
-    "@types/glidejs": "^1.0.30",
-    "autoprefixer": "^9.8.6",
-    "babel-eslint": "^10.1.0",
+    "@types/glidejs": "^1.0.31",
+    "ajv": "^8.6.2",
+    "autoprefixer": "^10.3.1",
     "babelify": "^10.0.0",
-    "browserify": "^16.5.2",
+    "browserify": "^17.0.0",
     "changelog-verify": "^1.1.2",
     "cpy-cli": "^3.1.1",
     "cross-env": "^7.0.3",
-    "cssnano": "^4.1.10",
-    "eslint": "^7.21.0",
+    "cssnano": "^5.0.8",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.24.1",
     "hashmark": "^5.0.0",
-    "husky": "^4.3.8",
-    "imagemin-cli": "^6.0.0",
-    "include-media": "^1.4.9",
-    "lint-staged": "^10.5.3",
+    "husky": "^7.0.1",
+    "imagemin-cli": "^7.0.0",
+    "include-media": "^1.4.10",
+    "lint-staged": "^11.1.2",
     "modularscale-sass": "^3.0.10",
     "npm-run-all": "^4.1.5",
-    "onchange": "^6.1.1",
-    "postcss-cli": "^7.1.2",
-    "prettier": "^2.3.2",
-    "prettier-plugin-go-template": "0.0.10",
+    "onchange": "^7.1.0",
+    "postcss": "^8.3.6",
+    "postcss-cli": "^8.3.1",
+    "prettier": "2.3.2",
+    "prettier-plugin-go-template": "0.0.11",
     "rimraf": "^3.0.2",
     "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^5.0.0",
-    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-config-recommended-scss": "^4.3.0",
     "stylelint-config-sass-guidelines": "^8.0.0",
     "stylelint-config-standard": "^22.0.0",
-    "stylelint-scss": "^3.19.0",
-    "susy": "^3.0.6",
-    "svgo": "^1.3.2",
-    "uglify-js": "^3.13.0",
+    "stylelint-scss": "^3.20.1",
+    "susy": "^3.0.7",
+    "svgo": "^2.4.0",
+    "uglify-js": "^3.14.1",
     "version-changelog": "^3.1.1"
   }
 }
