--- a/data/pt/highSchool.yml
+++ b/data/pt/highSchool.yml
@@ -1,5 +1,5 @@
 title: 'Ensino Médio nos Estados Unidos?'
-image: '/uploads/images/alunos-campus.jpg'
+image: '/uploads/images/alunos-campus.svg'
 alt: 'Jovens estudando e conversando'
 buttonText: 'saiba mais'
 buttonUrl: '/ensino-medio'
