--- a/data/pt/globalCitizen.yml
+++ b/data/pt/globalCitizen.yml
@@ -1,8 +1,6 @@
 title: "Quer se tornar um Cidadão Global?"
-image: "/uploads/images/cidadao-global.svg"
+image: "/uploads/images/cidadao-global.png"
 alt: "Jovens estudantes sorrindo na biblioteca"
-buttonText: "saiba mais"
-buttonUrl: "/ensino-medio"
 content: "
 Com a **YouBet!** nós criamos oportunidades de unir pessoas de diversas nações, promovendo o desenvolvimento pessoal e o respeito mútuo. Não queremos somente ensinar um idioma ou vender pacotes de viagens enlatados, mas unificar o aprendizado com uma imersão cultural, ensinando nossos alunos habilidades que os tornem cidadãos do mundo.
 
