feat: update hugo

--- a/netlify.yaml
+++ b/netlify.yaml
@@ -9,3 +9,7 @@ context:
     command: npm run build
   branch-deploy:
     command: npm run build
+redirects:
+  from: '/*'
+  to: '/404/'
+  status: 404
