fix: bug on build

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "compress:img": "imagemin \"./source/images/**/*.{gif,jpg,png,svg}\" --out-dir=./static/assets/images",
     "prelint": "rimraf ./testResults/**/*.xml",
     "lint": "npm-run-all --parallel lint:*",
-    "lint:es": "eslint --ext .es,.js \"./assets/scripts/**\" --format junit --output-file ./testResults/esLint.xml",
-    "lint:sass": "sass-lint \"./assets/styles/**/*.scss\" --verbose --no-exit --format junit --output ./testResults/sassLint.xml",
+    "lint:es": "eslint --ext .es,.js \"./source/scripts/**\" --format junit --output-file ./testResults/esLint.xml",
+    "lint:sass": "stylelint '**/*.scss' --syntax=scss --formatter --output-file ./testResults/stylelint.xml",
     "prettier:check": "prettier --check  'src/**/*.js'",
     "prettier:write": "prettier --write .",
     "sass:fix": "stylelint '**/*.scss' --syntax=scss --fix",
