feat: using minify by Hugo and refactor folders

--- a/package.json
+++ b/package.json
@@ -1,28 +1,25 @@
 {
   "name": "youbet",
   "version": "0.3.0",
-  "description": "CSS Framework",
+  "description": "youbet website",
   "main": "index.scss",
   "scripts": {
     "audit-deps": "rimraf -f package-lock.json && synp --source-file yarn.lock && npm audit & rimraf -f package-lock.json",
     "prebuild": "npm-run-all --parallel lint clean",
-    "build:assets": "npm-run-all --parallel build:img",
-    "build": "cross-env NODE_ENV=production npm-run-all build:assets",
-    "build:img": "npm-run-all compress:img",
+    "build": "cross-env NODE_ENV=production npm-run-all",
     "postbuild": "hugo --ignoreCache --cleanDestinationDir",
     "clean": "npm-run-all --parallel clean:*",
     "clean:dist": "rimraf ./public/**/*.*",
     "clean:testResults": "rimraf ./testResults/**/*.xml",
-    "compress:css": "postcss --use autoprefixer cssnano --safe -r ./assets/stylesheets/**/*.css",
-    "compress:img": "imagemin \"./source/images/**/*.{gif,jpg,png,svg}\" --out-dir=./static/assets/images",
     "prelint": "rimraf ./testResults/**/*.xml",
     "lint": "npm-run-all --parallel lint:*",
     "lint:es": "eslint --ext .es,.js \"./source/scripts/**\" --format junit --output-file ./testResults/esLint.xml",
     "lint:sass": "stylelint '**/*.scss' --syntax=scss --formatter --output-file ./testResults/stylelint.xml",
+    "lint:markdown": "markdownlint *.md content/**/*.md",
     "prettier:check": "prettier --check  'src/**/*.js'",
     "prettier:write": "prettier --write .",
     "sass:fix": "stylelint '**/*.scss' --syntax=scss --fix",
-    "start": "npm-run-all build:assets --parallel watch start:*",
+    "start": "npm-run-all  --parallel watch start:*",
     "start:hugo": "cross-env NODE_ENV=development hugo server --noHTTPCache=true --ignoreCache --templateMetrics --disableFastRender",
     "pretest": "npm run lint",
     "test": "jest",
@@ -70,6 +67,7 @@
     "eslint-plugin-import": "^2.24.1",
     "husky": "^7.0.1",
     "imagemin-cli": "^7.0.0",
+    "markdownlint-cli": "^0.28.1",
     "modularscale-sass": "^3.0.10",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
