--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@ hugo*
 
 # Generated files at default location
 /public/
-/assets/
 /resources/_gen
 ### Linux ###
 *~
@@ -79,10 +78,6 @@ coverage
 # Bower dependency directory (https://bower.io/)
 bower_components
 
-# package json
-yarn.lock
-package.lock
-
 # node-waf configuration
 .lock-wscript
 
@@ -152,7 +147,7 @@ bh_unicode_properties.cache
 GitHub.sublime-settings
 
 ### VisualStudioCode ###
-.vscode
+.vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
