--- a/package.json
+++ b/package.json
@@ -13,21 +13,19 @@
     "clean:testResults": "rimraf ./testResults/**/*.xml",
     "prelint": "rimraf ./testResults/**/*.xml",
     "lint": "npm-run-all --parallel lint:*",
-    "lint:es": "eslint --ext .es,.js \"./source/scripts/**\" --format junit --output-file ./testResults/esLint.xml",
+    "lint:es": "eslint --ext .es,.js \"./assets/scripts/**\" --format junit --output-file ./testResults/esLint.xml",
     "lint:sass": "stylelint '**/*.scss' --syntax=scss --formatter --output-file ./testResults/stylelint.xml",
     "lint:markdown": "markdownlint *.md content/**/*.md",
     "prettier:check": "prettier --check  'src/**/*.js'",
     "prettier:write": "prettier --write .",
     "sass:fix": "stylelint '**/*.scss' --syntax=scss --fix",
-    "start": "npm-run-all  --parallel watch start:*",
+    "start": "npm-run-all  --parallel start:*",
     "start:hugo": "cross-env NODE_ENV=development hugo server --noHTTPCache=true --ignoreCache --templateMetrics --disableFastRender",
     "pretest": "npm run lint",
     "test": "jest",
     "preversion": "git checkout master && git merge dev",
     "version": "version-changelog CHANGELOG.md && changelog-verify CHANGELOG.md && git add CHANGELOG.md",
-    "postversion": "git checkout dev && git merge master",
-    "watch": "npm-run-all --parallel watch:*",
-    "watch:img": "onchange \"./source/images/**/*.{gif,jpg,png,svg}\" -- npm run build:img"
+    "postversion": "git checkout dev && git merge master"
   },
   "repository": {
     "type": "git",
