feat: create layout for taxonomies

--- a/config.yaml
+++ b/config.yaml
@@ -11,7 +11,8 @@ disableFastRender: true
 ignoreFiles: ["\\.tmp$", "\\.tmp\\-browserify"]
 stepAnalysis: true
 templateMetrics: true
-pluralizeListTitles: false
+pluralizeListTitles: true
+preserveTaxonomyNames: true
 googleAnalytics: 'UA-90457577-1'
 buildFuture: true
 FootnoteReturnLinkContents: '↩'
@@ -19,9 +20,9 @@ disableHugoGeneratorInject: true
 removePathAccents: true
 taxonomies:
   role: 'role'
-  author: 'authors'
   tag: 'tags'
   category: 'categories'
+  author: 'authors'
 permalinks:
   pages: /:slug/
 languages:
