fix: update content on home

--- a/data/pt/benefits.yml
+++ b/data/pt/benefits.yml
@@ -2,7 +2,13 @@ title: 'Vantagens da YouBet!'
 list:
   - title: 'Imersão Cultural'
     text: 'Trabalhamos para garantir que todos tenham acesso a oportunidades e vivência internacional.'
+    image: '/uploads/images/talking.svg'
+    alt: 'pessoas conversando animadas'
   - title: 'Cidadania Global'
     text: 'Ajudamos nossos alunos  a terem habilidades que os tornem cidadãos globais.'
+    image: '/uploads/images/girl.svg'
+    alt: 'ilustração de uma garota feliz'
   - title: 'Personalização'
     text: 'Te ajudamos a escolher o melhor programa de acordo com seus objetivos de vida.'
+    image: '/uploads/images/boy-tablet.svg'
+    alt: 'garoto mexendo no tablet'
