--- a/package.json
+++ b/package.json
@@ -41,47 +41,51 @@
   "license": "MIT",
   "homepage": "http://youbetschool.com",
   "dependencies": {
-    "@glidejs/glide": "^3.4.1",
-    "caniuse-lite": "^1.0.30001251",
-    "core-js": "^3.16.2",
+    "@glidejs/glide": "^3.5.2",
+    "caniuse-lite": "^1.0.30001305",
+    "core-js": "^3.21.0",
     "formbouncerjs": "^1.4.6",
-    "jest": "^27.0.6",
-    "netlify-cms": "^2.10.158",
-    "node-sass": "^6.0.1"
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-sass": "^5.1.0",
+    "imagemin-mozjpeg": "^10.0.0",
+    "jest": "^27.4.7",
+    "netlify-cms": "^2.10.185",
+    "node-sass": "^7.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.15.0",
-    "@babel/eslint-parser": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
+    "@babel/cli": "^7.17.0",
+    "@babel/core": "^7.17.0",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
     "@types/glidejs": "^1.0.31",
-    "autoprefixer": "^10.3.1",
+    "autoprefixer": "^10.4.2",
     "babelify": "^10.0.0",
     "changelog-verify": "^1.1.2",
     "cross-env": "^7.0.3",
-    "cssnano": "^5.0.8",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.24.1",
-    "husky": "^7.0.1",
+    "cssnano": "^5.0.16",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "husky": "^7.0.4",
     "imagemin-cli": "^7.0.0",
-    "markdownlint-cli": "^0.28.1",
+    "markdownlint-cli": "^0.30.0",
     "modularscale-sass": "^3.0.10",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
-    "postcss": "^8.3.6",
-    "postcss-cli": "^8.3.1",
-    "prettier": "2.3.2",
+    "postcss": "^8.4.6",
+    "postcss-cli": "^9.1.0",
+    "prettier": "2.5.1",
     "prettier-plugin-go-template": "0.0.11",
-    "stylelint": "^13.13.1",
-    "stylelint-config-recommended": "^5.0.0",
-    "stylelint-config-recommended-scss": "^4.3.0",
-    "stylelint-config-sass-guidelines": "^8.0.0",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-scss": "^3.20.1",
+    "stylelint": "^14.3.0",
+    "stylelint-config-recommended": "^6.0.0",
+    "stylelint-config-recommended-scss": "^5.0.2",
+    "stylelint-config-sass-guidelines": "^9.0.1",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-scss": "^4.1.0",
     "susy": "^3.0.7",
-    "svgo": "^2.4.0",
-    "synp": "^1.9.7",
+    "svgo": "^2.8.0",
+    "synp": "^1.9.9",
     "version-changelog": "^3.1.1"
   }
 }
